Mon Aug 01 15:45:23 2011  Eric Hodel  <drbrain@segment7.net>

	* test/rake/test_rake_functional.rb:  Don't assume the binary name of
	  ruby is "ruby".  [Ruby 1.9 - Bug #5114]
	* test/rake/helper.rb:  ditto

Mon Aug  1 15:31:14 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/io/console/test_io_console.rb (TestIO_Console#test_sync):
	  Skip when PTY allocation failed (that's not our failt).

Mon Aug  1 15:04:12 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/xmlrpc/test_webrick_server.rb (Test_Webrick#setup_http_server):
	  XMLRPC::Client.new3(), when called without host: argument, tries
	  to  connect to  a host  where "localhost"  resolves to.   On the
	  other  hand  a  WEBrick::HTTPServer.new(), when  called  without
	  BindAddress:  argument, tries  to listen  all the  address where
	  getaddrinfo(AF_UNSPEC) resolves to.   This is a mismatch because
	  "localhost" might not resolve to one of those listening sockets.
	  We  would  better explicitly  specify  "localhost"  here and  if
	  failed, just skip the whole test.

Mon Aug 01 14:24:56 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc.rb:  Import RDoc 3.9.1.  Fixes bugs in the RDoc::Markup
	  parser.

Mon Aug  1 12:00:35 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (concatstrings): don't use initial ASCII-8BIT string.
	  [ruby-core:38635] [Bug #5126]

Sun Jul 31 22:57:16 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* enc/Makefile.in (ECHO1): Same as the recent fix in common.mk.
	  ":" in a make variable replacement cause a syntax error with
	  /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

Sun Jul 31 21:16:02 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* complex.c (f_signbit): gcc4 on Solaris DOES have signbit but does
	  not have it on header.

	* math.c: ditto.

Sun Jul 31 21:09:04 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (node_name.inc): Use $(Q) for consistency.

	* Makefile.in (INSNS): ditto.
